[gd_scene load_steps=17 format=3 uid="uid://c7koopa123456"]

[ext_resource type="Script" path="res://scripts/koopa.gd" id="1_koopa"]
[ext_resource type="Texture2D" path="res://assets/sprites/Enemies.png" id="2_sprite"]
[ext_resource type="AudioStream" path="res://assets/audio/stompswim.wav" id="3_stomp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(16, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(16, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_green_walk1"]
atlas = ExtResource("2_sprite")
region = Rect2(0, 112, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_green_walk2"]
atlas = ExtResource("2_sprite")
region = Rect2(18, 112, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_green_shell"]
atlas = ExtResource("2_sprite")
region = Rect2(72, 120, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_green_shake1"]
atlas = ExtResource("2_sprite")
region = Rect2(72, 120, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_green_shake2"]
atlas = ExtResource("2_sprite")
region = Rect2(90, 120, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_red_walk1"]
atlas = ExtResource("2_sprite")
region = Rect2(0, 318, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_red_walk2"]
atlas = ExtResource("2_sprite")
region = Rect2(18, 318, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_red_shell"]
atlas = ExtResource("2_sprite")
region = Rect2(72, 326, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_red_shake1"]
atlas = ExtResource("2_sprite")
region = Rect2(72, 326, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_red_shake2"]
atlas = ExtResource("2_sprite")
region = Rect2(90, 326, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_koopa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_green_walk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_green_walk2")
}],
"loop": true,
"name": &"green_walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_green_shell")
}],
"loop": false,
"name": &"green_shell",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_green_shake1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_green_shake2")
}],
"loop": true,
"name": &"green_shell_shake",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_red_walk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_red_walk2")
}],
"loop": true,
"name": &"red_walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_red_shell")
}],
"loop": false,
"name": &"red_shell",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_red_shake1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_red_shake2")
}],
"loop": true,
"name": &"red_shell_shake",
"speed": 8.0
}]

[node name="Koopa" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_koopa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_koopa")
animation = &"green_walk"
autoplay = "green_walk"
centered = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("RectangleShape2D_2")

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource("RectangleShape2D_3")

[node name="LedgeDetector" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(0, 20)
collision_mask = 2

[node name="StompSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_stomp")

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detected"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_enemy_detected"]
